# AFminD

./: .gitignore  README.md  pyproject.toml
AFminD/: compute_expected_distances.py  cut_binding_sites.py  extract_distogram_scores.py  extract_pdist.py  extract_scores.py  find_binding_sites.py  utils.py
AFminD/alphafold/common/: confidence.py
AFminD/data/: pairing.py  rcsb.py  utils.py
AFminD/data/uniprot/: __init__.py  api.py  custom_features.yml
