[tool.poetry]
name = "AFminD"
version = "0.1.0"
description = ""
authors = ["Alireza Omidi <aomidi@student.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
biopython = "^1.84"
tqdm = "^4.66.5"
requests = "^2.32.3"
pandas = "^2.2.2"
scipy = "^1.14.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ipynb = "^0.5.1"
ipykernel = "^6.29.5"
textalloc = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
